--- a/.github/workflows/alt_701e412d67.yml
+++ b/.github/workflows/alt_701e412d67.yml
@@ -19,8 +19,7 @@ jobs:
     steps:
     - name: Get Upstream github actor
       run: |
-        github_actor=$(echo ${{ secrets.UPSTREAM_SOURCE_701E412D67 }} | cut -d/ -f1)
-        echo '::set-env name=UPSTREAM_ACTOR_701E412D67::$github_actor'
+        echo ${{ secrets.UPSTREAM_SOURCE_701E412D67 }} | cut -d/ -f1 > /tmp/UPSTREAM_ACTOR_701E412D67
     # - uses: actions/checkout@v2
     #   with:
     #     persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
@@ -32,7 +31,7 @@ jobs:
     #     #submodules: recursive
     - name: Set up auth
       run: |
-        git config --global http.https://github.com/.extraheader "Authorization: Basic $(echo -n "${UPSTREAM_ACTOR_701E412D67}:${{ secrets.UPSTREAM_PAT_701E412D67 }}" | base64 --wrap=0)"
+        git config --global http.https://github.com/.extraheader "Authorization: Basic $(echo -n "$(cat /tmp/UPSTREAM_ACTOR_701E412D67):${{ secrets.UPSTREAM_PAT_701E412D67 }}" | base64 --wrap=0)"
     - name: Checkout source
       run: |
         git version
@@ -74,7 +73,7 @@ jobs:
         &>/dev/null git commit -m "Updated: $(date +%d.%m.%Y)" && echo "::set-output name=committed::1" || echo "Nothing to update"
     - name: Push Changes to Upstream
       run: |
-        git push "https://${UPSTREAM_ACTOR_701E412D67}:${{ secrets.UPSTREAM_PAT_701E412D67 }}@github.com/${{ secrets.UPSTREAM_SOURCE_701E412D67 }}.git" HEAD:${{ secrets.UPSTREAM_BRANCH_701E412D67 }}
+        git push "https://$(cat /tmp/UPSTREAM_ACTOR_701E412D67):${{ secrets.UPSTREAM_PAT_701E412D67 }}@github.com/${{ secrets.UPSTREAM_SOURCE_701E412D67 }}.git" HEAD:${{ secrets.UPSTREAM_BRANCH_701E412D67 }}
     - uses: actions/checkout@v2
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
