--- a/.github/workflows/main_c108c1384f.yml
+++ b/.github/workflows/main_c108c1384f.yml
@@ -19,8 +19,7 @@ jobs:
     steps:
     - name: Get Upstream github actor
       run: |
-        github_actor=$(echo ${{ secrets.UPSTREAM_SOURCE_C108C1384F }} | cut -d/ -f1)
-        echo '::set-env name=UPSTREAM_ACTOR_C108C1384F::$github_actor'
+        echo ${{ secrets.UPSTREAM_SOURCE_C108C1384F }} | cut -d/ -f1 > /tmp/UPSTREAM_ACTOR_C108C1384F
     # - uses: actions/checkout@v2
     #   with:
     #     persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
@@ -32,7 +31,7 @@ jobs:
     #     #submodules: recursive
     - name: Set up auth
       run: |
-        git config --global http.https://github.com/.extraheader "Authorization: Basic $(echo -n "${UPSTREAM_ACTOR_C108C1384F}:${{ secrets.UPSTREAM_PAT_C108C1384F }}" | base64 --wrap=0)"
+        git config --global http.https://github.com/.extraheader "Authorization: Basic $(echo -n "$(cat /tmp/UPSTREAM_ACTOR_C108C1384F):${{ secrets.UPSTREAM_PAT_C108C1384F }}" | base64 --wrap=0)"
     - name: Checkout source
       run: |
         git version
@@ -74,7 +73,7 @@ jobs:
         &>/dev/null git commit -m "Updated: $(date +%d.%m.%Y)" && echo "::set-output name=committed::1" || echo "Nothing to update"
     - name: Push Changes to Upstream
       run: |
-        git push "https://${UPSTREAM_ACTOR_C108C1384F}:${{ secrets.UPSTREAM_PAT_C108C1384F }}@github.com/${{ secrets.UPSTREAM_SOURCE_C108C1384F }}.git" HEAD:${{ secrets.UPSTREAM_BRANCH_C108C1384F }}
+        git push "https://$(cat /tmp/UPSTREAM_ACTOR_C108C1384F):${{ secrets.UPSTREAM_PAT_C108C1384F }}@github.com/${{ secrets.UPSTREAM_SOURCE_C108C1384F }}.git" HEAD:${{ secrets.UPSTREAM_BRANCH_C108C1384F }}
     - uses: actions/checkout@v2
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
